# collector

./: .gitignore  CMakeLists.txt  README.md  format.py
client/: CMakeLists.txt
client/src/: client.cpp
cmake/: build_helper.cmake  gtest_loader.mm
consumer/: CMakeLists.txt
consumer/src/: consumer.cpp
demo/: CMakeLists.txt
demo/src/: demo.cpp
producer/: CMakeLists.txt
producer/src/: producer.cpp
server/: CMakeLists.txt
server/src/: server.cpp
